--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <p>your-age</p>
                 <p>your-batch</p>
                 <p>your-degree</p>
+                <p>your email</p>
                 <h3 class="sub white" style="font-family: 'Indie Flower', cursive;">
                     I love Open Source Projects
                 </h3>
