--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <p>19.1</p>
                 <p>your-degree</p>
                 <h3 class="sub white" style="font-family: 'Indie Flower', cursive;">
-                    I love Open Source Projects
+                    I love all Open Source Projects
                 </h3>
                 <p>
                     <img src="https://img.shields.io/badge/GitHub_Workshop-FOSS_Community_of_NSBM-brightgreen.svg">
